<resources>
    <string name="app_name">Note Book</string>
    <string name="note_book">Note Book</string>
    <string name="welcome">Welcome</string>
    <string name="plane_whatyou_will_do_today_tomorrow_and_beyond">plane whatyou will do today, tomorrow and beyond</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="plan_what_you_will_do_today_tomorrow_and_beyond">Plan what you will do today, tomorrow, and beyond</string>
    <string name="email_adress">Email Adress</string>
    <string name="login">login</string>
    <string name="sing_up">Sing Up</string>
    <string name="back">Back</string>
    <string name="user_name">User Name</string>
    <string name="conform_password">Conform Password</string>
    <string name="or_login_with">Or login with</string>
    <string name="sing_up_page_link">Don\'t have a account ?</string>
    <string name="my_notes">My Notes</string>
    <string name="click_to">Click to</string>
    <string name="login_out">Login Out</string>
    <string name="settings">Settings</string>
    <string name="ashen_almeida">Ashen Almeida</string>
    <string name="plus">+</string>
    <string name="title">Title</string>
    <string name="add_new_note">Add New Note</string>
    <string name="done">Done</string>
    <string name="content">Content</string>
    <string name="title_">Title</string>
    <string name="content_">Content</string>
    <string name="delete_note">Delete Note</string>
    <string name="note_app">Note App</string>
</resources>