<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page_background"
    android:orientation="vertical">




    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="500dp"
        android:layout_marginTop="175dp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_gravity="center"
        android:background="@drawable/login_page_backroung_color"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/welcome_back"
            android:textSize="30sp"
            android:textColor="@color/light_yellow"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/plan_what_you_will_do_today_tomorrow_and_beyond"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>


        <EditText
            android:id="@+id/Email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:hint="@string/email_adress"
            android:textColorHighlight="@color/white"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/login_page_text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

        </EditText>

        <EditText
            android:id="@+id/Password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:drawableStart="@drawable/custom_password_icon"
            android:textColorHighlight="@color/white"
            android:layout_gravity="center"
            android:drawablePadding="12dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/login_page_text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/light_yellow"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="25sp">

        </Button>

        <TextView
            android:id="@+id/loginWith"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/or_login_with"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google_icon"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_icon"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:text="@string/sing_up_page_link"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/SingUpLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sing_up"
                android:textColor="@color/light_yellow"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>










    </LinearLayout>

</LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>