<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotesDetailsPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/arrow_back_icon">

            </ImageView>

            <TextView
                android:id="@+id/page_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:text="@string/add_new_note"
                android:textSize="25sp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_margin="15dp"
            android:background="@drawable/round_background"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:hint="@string/title"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold">

            </EditText>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="15dp"
            android:background="@drawable/round_background"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/note_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content"
                android:textColor="@color/black"
                android:textColorHint="@color/black">

            </EditText>

        </LinearLayout>

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/red"
            android:text="@string/delete_note"
            android:textColor="@color/black"
            android:visibility="gone"
            android:textSize="25sp">

        </Button>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/light_yellow"
            android:text="@string/done"
            android:textSize="25sp"
            android:textColor="@color/black">

        </Button>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>