<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUpPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sing_up_page_background"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="530dp"
        android:layout_marginTop="125dp"
        android:layout_gravity="center"
        android:background="@drawable/login_page_backroung_color"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="Sing Up"
            android:textSize="30sp"
            android:textColor="@color/light_yellow"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/email_address"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_page_text"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:hint="@string/email_adress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white">

        </EditText>

        <EditText
            android:id="@+id/user_name"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_page_text"
            android:drawableStart="@drawable/custom_user_name_icon"
            android:drawablePadding="12dp"
            android:hint="@string/user_name"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white">

        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_page_text"
            android:drawableStart="@drawable/custom_password_icon"
            android:drawablePadding="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/conform_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_page_text"
            android:drawableStart="@drawable/custom_password_icon"
            android:drawablePadding="12dp"
            android:hint="@string/conform_password"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/sing_up"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/light_yellow"
            android:text="@string/sing_up"
            android:textColor="@color/black"
            android:textSize="25sp">

        </Button>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18dp"
                android:text="@string/click_to"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:clickable="true"
                android:focusable="true"
                android:text="login"
                android:textColor="@color/light_yellow"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>