<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20sp"
                android:src="@drawable/arrow_back_icon">

            </ImageView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="75dp"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_margin="15dp"
            android:background="@drawable/round_background"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/profile_icon"
                android:layout_margin="15dp">

            </ImageView>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/ashen_almeida"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_margin="15dp"
            android:background="@drawable/round_background"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/profile_icon"
                android:layout_margin="15dp">

            </ImageView>

            <TextView
                android:id="@+id/user_email"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/ashen_almeida"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>


        </LinearLayout>



        <Button
            android:id="@+id/login_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/light_yellow"
            android:text="@string/login_out"
            android:textSize="20sp"
            android:textColor="@color/black">

        </Button>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>